--- a/markets/scss/style.scss
+++ b/markets/scss/style.scss
@@ -251,8 +251,8 @@ body{
 .block-clothing{
     display: flex;
     flex-wrap: wrap;
-    width: 30%;
-    height: 520px;
+    width: 50%;
+    height: 525px;
     overflow: scroll; 
 }
 
@@ -261,6 +261,7 @@ body{
 }
 
 .block-input-buy{
+    margin-right: 20px;
     width: 334px;
     height: 59px;
     background: radial-gradient(122.88% 122.88% at 50% 50%, rgba(255, 70, 70, 0.35) 0%, rgba(0, 0, 0, 0) 100%);
@@ -339,6 +340,13 @@ margin-bottom: 20px;
 .block-buy{
     overflow-y: scroll;
 }
+.flex-block-left-category{
+    display: flex;
+}
+.flex-block-meet{
+    display: flex;
+    flex-wrap: wrap;
+}
 .flex-block-method{
     display: flex;
 }
@@ -362,6 +370,25 @@ margin-left: 15px;
 .sum-product{
     display: flex;
 }
+.block-buy{
+    overflow-y: scroll;
+    height: 304px;
+
+}
+
+.block-buy::-webkit-scrollbar {
+    margin-left: 30px;
+    width: 2px;
+    background: #0C0000;
+    border-radius: 50px;
+  }
+  
+  .block-buy::-webkit-scrollbar-thumb {
+    height: 20px;
+    background-color: #FF4646;
+    border-radius: 50px;
+    position: relative;
+  }
 
 // Адаптив
 
@@ -372,10 +399,24 @@ margin-left: 15px;
 }
 @media screen and (min-width: 1366px) {
     .container{
-        width: 1614px;
+        width: 1300px;
+    }
+}
+@media screen and (min-width: 1440px) {
+    .container{
+        width: 1400px;
+    }
+}
+@media screen and (min-width: 1800px) {
+    .block-clothing{
+        width: 22%;
+        height: 524px;
     }
 }
 @media screen and (min-width: 1920px) {
+    .block-clothing{
+        width: 45%;
+    }
     .container{
         width: 1836px;
     }
@@ -387,8 +428,8 @@ margin-left: 15px;
 }
 @media screen and (min-width: 3840px) {
     .container{
-        width: 3749px;
-        width: 2475px;
+        margin-top: 550px;
+        width: 1661px;
+    transform: scale(200%);
     }
 }
-
